--- a/.env
+++ b/.env
@@ -1,7 +1,5 @@
 DB_USER=postgres
 DB_PASS=postgres
 DB_HOST=localhost
-DB_NAME=golang_api
+DB_NAME=library_restapi
 DB_PORT=5432
-
-JWT_SECRET=SANGATRAHASIA
