Push auth modeling

--- a/.env
+++ b/.env
@@ -7,5 +7,6 @@ DB_PORT=5432
 GO_PORT=8000
 GO_ENV=test
 
-DB_NAMETEST=library_restapi_test
+SMP_USERNAME=library-api@proton.me
+smp_password=libraryapi123
 
