--- a/.env
+++ b/.env
@@ -5,8 +5,12 @@ DB_NAME=library_restapi
 DB_PORT=5432
 
 GO_PORT=8000
-GO_ENV=test
+GO_ENV=production
 
-SMP_USERNAME=library-api@proton.me
-smp_password=libraryapi123
+SMTP_HOST=smtp.mailtrap.io
+SMTP_USERNAME=fccf6c34cd880b
+SMTP_PASSWORD=e3a77c777bd541
+SMTP_PORT=587
+SMTP_SENDER_NAME=hendra.lijaya@student.pradita.ac.id
 
+JWT_SECRET=ac43724f16e9241d990427ab7c8f4228
