--- a/.env
+++ b/.env
@@ -1,11 +1,11 @@
 DB_USER=postgres
-DB_PASS=postgres
+DB_PASS=Austin12345
 DB_HOST=localhost
 DB_NAME=library_restapi
 DB_PORT=5432
 
 GO_PORT=8000
-GO_ENV=production
+GO_ENV=test
 
 SMTP_HOST=smtp.mailtrap.io
 SMTP_USERNAME=fccf6c34cd880b
